--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Dab2axis",
+    "name": "axis",
     "description": "Data Integration",
     "type": "project",
     "license": "MIT",
